2006-11-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/trade.cpp: Fixed money field to no longer hide below the
	bottom of the window.
	* src/CMakeLists.txt: Added shoplistbox.h/cpp files.
	* src/gui/updatewindow.cpp: Fixed percentage indicator of update
	window.

2006-11-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/images/login_wallpaper.png: Reverted to standard
	wallpaper.
	* src/resources/resourcemanager.cpp: More useful logging about
	resources that are being loaded (including source).

2006-11-05  Yohann Ferreira  <bertram@cegetel.net>

	* src/Makefile.am, src/gui/buy.cpp, src/gui/buy.h, src/gui/shop.h,
	src/gui/shop.cpp, src/gui/sell.cpp, src/gui/shoplistbox.h,
	src/gui/shoplistbox.cpp: Added pictures to items in buy dialogs.
	Also too expensive items are highlighted in gray and can't be
	selected.
	* src/gui/shop.cpp, src/gui/shop.h, src/gui.sell.h, src/gui/sell.cpp,
	src/net/buysellhandler.cpp, src/gui/shoplistbox.h,
	src/gui/shoplistbox.cpp: Added item's pictures in sell dialogs, and
	precisions about the total money in it.
	* src/gui/shop.h, src/gui/shop.cpp, src/gui/sell.cpp: Fixes to Sell
	dialog.
	* src/gui/sell.cpp: Fixes the money value after seling something.

2006-11-05  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* data/graphics/sprites/Makefile.am: Use tabs instead of spaces as
	required by automake (AFAIK).

2006-11-05  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/weapon0.png,
	data/graphics/sprites/weapon2.png,
	data/graphics/sprites/weapon-bow.xml,
	data/graphics/sprites/weapon-dagger.xml,
	data/graphics/sprites/weapon-fist.xml,
	data/graphics/sprites/weapon-scythe.xml,
	data/graphics/items/weapon-polearm-scythe.png, src/player.cpp,
	src/player.h, src/being.cpp, src/being.h, data/items.xml: Added scythe
	as a permanent weapon (ID: 623)

2006-11-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/maps/new_1-1.tmx.gz, data/maps/new_10-1.tmx.gz,
	data/maps/new_11-1.tmx.gz, data/maps/new_14-1.tmx.gz,